Fix alignment issues across multiple list items

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -73,15 +73,26 @@ header {
 
 .todo-li {
   display: grid;
-  grid-template-columns: auto auto 1fr auto auto auto;
+  grid-template-columns: minmax(min-content, 10%) minmax(min-content, 10%) 1fr minmax(min-content, 10%) minmax(min-content, 10%) minmax(min-content, 10%);
   grid-template-rows: 1fr;
   align-items: center;
 
   border: 1px solid black;
-  padding: 10px 0;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+  border-radius: 0.25rem;;
+}
+
+.todo-li > div {
+  padding-left: 0.5rem;
+}
+
+.todo-li > div:first-of-type {
+  padding-left: 0;
 }
 
 #main-content {
+  padding: 0.5rem;
   grid-column: 2 / 3;
   grid-row: 3 / 4;
 
